# velodownloader

./: .gitignore  CMakeLists.txt  README.md
resources/: shared.qrc
resources/qml/: CustomButton.qml  CustomCheckbox.qml  CustomCombobox.qml  CustomRadioButton.qml  main.qml
scripts/: build.cmd
src/: main.cpp
src/database/: dbmanager.cpp  dbmanager.hpp
src/gui/: framelesshelper.cpp  mainwindow.cpp  mainwindow.hpp
